--- a/package.json
+++ b/package.json
@@ -11,5 +11,9 @@
   "peerDependencies": {
     "react": "18.2.0",
     "react-native": "0.71.4"
+  },
+  "devDependencies": {
+    "react": "18.2.0",
+    "react-native": "0.71.4"
   }
 }
