--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "mv-testlib",
   "version": "1.0.2",
   "description": "learning to build lib ",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
