--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "mv-testlib",
-  "version": "1.0.4",
+  "version": "1.0.2",
   "description": "learning to build lib ",
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
